# e-sim

./: .env.sample  .gitignore  .gitmodules  README.md  Taskfile.yml  cors.json  docker-compose.prod.yml  docker-compose.yml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py
app/storage/: document_store.py
backend/: .env.example  Dockerfile  README.md  WORKER_README.md  alembic.ini  requirements.txt  test_debug.py
backend/.devcontainer/: devcontainer.json
backend/alembic/: env.py
backend/alembic/versions/: 2b3c4d5e6f7a_add_tasks_table.py  525566053416_remove_documents_update_projects.py  7f4e6c5b9d12_move_project_content_to_gcs.py  8d4a1f7c2b31_add_user_billing_and_project_count.py  994a05da2752_remove_drive_folder_id.py  9c6dc876dcde_add_user_balance.py  c7d8e9f0a1b2_add_tickets_and_ticket_votes.py  f64b4d1440df_create_users_projects_documents_tables.py
backend/app/: celery_app.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  document.py  (+5 more)
backend/scripts/: run_migrations.sh  start_app.sh  start_container.sh  start_services.sh  start_worker.sh
deploy/nginx/: backend.conf
frontend/: .dockerignore  Dockerfile  build.sh  package.json
frontend/.devcontainer/: devcontainer.json
frontend/public/: cpp-web.js
scripts/: build_frontend.sh  deploy.sh  install-docker-ubuntu.sh  install-task.sh  setup.sh
simulator/: Dockerfile  build.sh  simulator.cpp
testapp/: CMakeLists.txt  Dockerfile  README.md  build.sh  editor.cpp
(+43 files in other folders)
